@@ -5,7 +5,6 @@ plugins {
 }
 
 apply plugin: 'io.spring.dependency-management'
-
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.android.application'
 
@@ -19,12 +18,28 @@ kapt {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
+
+    sourceSets {
+        test.java.srcDirs += 'src/test/kotlin'
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
+    }
+
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+            jvmArgs '--enable-preview'
+        }
+    }
+
+    aaptOptions {
+        cruncherEnabled false
+    }
 
     defaultConfig {
         applicationId "com.example.weathermap"
         minSdk 23
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -53,6 +68,7 @@ android {
         exclude 'META-INF/spring.factories'
         exclude 'license.txt'
         exclude 'META-INF/additional-spring-configuration-metadata.json'
+        exclude 'META-INF/INDEX.LIST'
     }
 
     buildTypes {
@@ -62,11 +78,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures{
         viewBinding true
@@ -88,11 +104,26 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.junit.platform:junit-platform-commons:1.8.2'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'com.android.support.test:rules:1.0.2'
+    testImplementation 'com.android.support.test:runner:1.0.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    //testImplementation("com.squareup.okhttp3:okhttp:4.9.0")
+    //testImplementation "org.mockito:mockito-core:3.+"
+    testImplementation 'org.robolectric:robolectric:4.3'
+//    testImplementation 'org.robolectric:android-all:jar:Q-robolectric-5415296'
+
+
+
+
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     //Gson
     //implementation 'com.google.code.gson:gson:2.8.9'
 
@@ -101,23 +132,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Kotlin components
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.0"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt'
 
     // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
-//
-//    // HILT
-//    implementation "com.google.dagger:hilt-android:2.37"
-//    kapt "com.google.dagger:hilt-android-compiler:2.37"
-//
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-//    kapt "androidx.hilt:hilt-compiler:1.0.0"
 }
